After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 791031 - SoupCache: fix the timestamp for responses
SoupCache: fix the timestamp for responses
Status: RESOLVED FIXED
Product: libsoup
Classification: Core
Component: Misc
unspecified
Other Linux
: Normal normal
: ---
Assigned To: libsoup-maint@gnome.bugs
libsoup-maint@gnome.bugs
Depends on:
Blocks:
 
 
Reported: 2017-11-30 16:14 UTC by Claudio Saavedra
Modified: 2017-12-01 09:43 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
SoupCache: fix the timestamp for responses (1.00 KB, patch)
2017-11-30 16:19 UTC, Claudio Saavedra
committed Details | Review

Description Claudio Saavedra 2017-11-30 16:14:30 UTC
There's a small and probably inoffensive typo in the cache code, let's fix it.
Comment 1 Claudio Saavedra 2017-11-30 16:19:52 UTC
Created attachment 364689 [details] [review]
SoupCache: fix the timestamp for responses
Comment 2 Dan Winship 2017-11-30 16:43:50 UTC
Comment on attachment 364689 [details] [review]
SoupCache: fix the timestamp for responses

looks right
Comment 3 Claudio Saavedra 2017-12-01 09:43:10 UTC
Attachment 364689 [details] pushed as a500e1f - SoupCache: fix the timestamp for responses