SoupCache: fix the timestamp for responses

https://bugzilla.gnome.org/show_bug.cgi?id=791031